Containerized the project; hidden exposed key